# neuro-karaoke-wrapper

./: .gitignore  .gitlab-ci.yml  README.md  auto-updater.js  discord-manager.js  main.js  package.json  splash.html  titlebar.html  tray-manager.js
.github/workflows/: build.yml
Android/: .gitignore
Android/app/: build.gradle.kts  proguard-rules.pro
Desktop/: Dockerfile.linux-build  README.md  build.mjs  package.json
Desktop-old/: tsconfig.json
Desktop-old/assets/: icon.icns
Desktop-old/src/: auto-updater.ts  tray-manager.ts  util.ts
Desktop/assets/: injected.css  preload.js  splash.html
Desktop/scripts/: build-linux-docker.sh
Desktop/src/: config.ts  discord-manager.ts  exampleImpl.d.ts  exampleImpl.js  globals.d.ts  injected.js  injected.ts  injected_common.js  injected_common.ts  injected_external.js  injected_external.ts  injected_neurokaraoke.js  injected_neurokaraoke.ts  main.ts  neurokaraoke-api.js  neurokaraoke-api.ts  neurokaraoke-app.d.ts  splash.js  splash.ts  tray-manager.ts  window.d.ts
Desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
Desktop/src-tauri/permissions/: custom.toml
Desktop/src-tauri/src/: cli.rs  lib.rs  main.rs  navigation.rs  sandbox.rs
homebrew/: README.md  SETUP.md
homebrew/.github/workflows/: bump-cask.yml
homebrew/Casks/: neurokaraoke.rb
ios/NeuroKaraoke/: README.md
ios/NeuroKaraoke/NeuroKaraoke/: ContentView.swift  Info.plist  NeuroKaraokeApp.swift  NeuroKaraokeData.swift
ios/NeuroKaraoke/NeuroKaraoke.xcodeproj/: project.pbxproj
ios/NeuroKaraoke/NeuroKaraokeTests/: NeuroKaraokeTests.swift
(+63 files in other folders)
