[package]
name = "neuro-karaoke-app"
version = "0.1.0"
description = "Desktop wrapper for https://neurokaraoke.com/"
authors = ["Soul", "Aferil", "AverseMoon"] # if you contribute, add your name here!
edition = "2021"

[lib]
name = "neuro_karaoke_app_lib"
#crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
#tokio = { version = "1.49.0", features = ["time"] }
tauri = { version = "2.10.2", features = [
    "tray-icon",
    "devtools",
] }
clap = { version = "4.6.1", features = ["derive"] }
#tauri-plugin-window-state = "2.4.1"
#tauri-plugin-oauth = "2.0.0"
#tauri-plugin-http = "2.5.7"
#tauri-plugin-global-shortcut = { version = "2.3.1" }
#tauri-plugin-shell = { version = "2.3.5" }
#tauri-plugin-opener = { version = "2.5.3" }
#tauri-plugin-single-instance = "2.4.0"
#tauri-plugin-notification = "2.3.3"